# ros2-pabx-adapter

./: 1_build_adapter.sh  2_run_adapter.sh  3_request_announcement.sh  Dockerfile  LICENSE  README.md  docker-compose.yaml  request_announcement.sh
src/adapter_pabx/: CMakeLists.txt  package.xml
src/adapter_pabx/config/: accounts.json
src/adapter_pabx/include/adapter_pabx/: announcement_server.hpp  sip_account.hpp  sip_call.hpp  sip_endpoint.hpp
src/adapter_pabx/src/: announcement_server.cpp  sip_account.cpp  sip_call.cpp  sip_endpoint.cpp
